--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "jasmine": "1.3.1"
+  },
+  "exportsOverride": {
+    "jasmine": {}
+  }
 }
