--- a/package.json
+++ b/package.json
@@ -23,5 +23,26 @@
   "bugs": {
     "url": "https://github.com/appmite/appmite-browserdb/issues"
   },
-  "homepage": "https://github.com/appmite/appmite-browserdb"
+  "homepage": "https://github.com/appmite/appmite-browserdb",
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "time-grunt": "~0.2.10",
+    "browserify": "~3.31.2",
+    "grunt-browserify": "~1.3.1",
+    "karma-script-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-coffee-preprocessor": "~0.1.3",
+    "requirejs": "~2.1.11",
+    "karma-requirejs": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "karma": "~0.10.9",
+    "grunt-karma": "~0.6.2"
+  }
 }
