--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,7 @@
     "tests"
   ],
   "devDependencies": {
-    "jasmine": "1.3.1"
-  },
-  "exportsOverride": {
-    "jasmine": {}
+    "jasmine": "1.3.1",
+    "underscore": "~1.6.0"
   }
 }
